--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul class="meu"></ul>
         <li><a href="#">Inicio</a></li>
         <li><a href="#">Sobre</a></li>
-        <li><a href="#">Serviço</a></li>
+        <li><a href="#">Serviços</a></li>
         <li><a href="#">Contato</a></li>
     </nav>
 
