--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <span></span>
             <span></span>
         </label>
-        <ul class="meu"></ul>
+        <ul class="menu">
         <li><a href="#">Inicio</a></li>
         <li><a href="#">Sobre</a></li>
         <li><a href="#">Serviços</a></li>
