--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
         <li><a href="#">Sobre</a></li>
         <li><a href="#">Serviços</a></li>
         <li><a href="#">Contato</a></li>
-    </ul>
+        </ul>
+
+        <ul class="FESTAS TRADICIONAIS E CULTURA DE SABORES">
+            <title>FESTA JUNINA E CULINÁRIA</title>
+            As festas tradicionais do campo, como a Festa Junina e o São João, trazem para as cidades elementos rurais, como danças típicas, comidas tradicionais e músicas regionais. Esses eventos celebram a cultura rural e permitem que os urbanos experimentem as tradições do interior.
+
+A cultura de troca de saberes promove a conexão entre o campo e a cidade através de oficinas e palestras sobre temas como agricultura sustentável, culinária rural e artesanato. Essas iniciativas ajudam os urbanos a aprender práticas do campo, como cultivo em hortas urbanas e receitas tradicionais, criando um ambiente de aprendizado mútuo e valorização cultural.
+
+Essas ações integram as culturas, promovendo o respeito e a conscientização entre o campo e a cidade.
+        </ul>
 
  <h1>Agrinho 2025</h1>
  
