--- a/index.html
+++ b/index.html
@@ -3,41 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo2025</title>
+    <title>Festa Junina e Culinária</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-    <nav>
-        <input type="checkbox" id="menu-toggle" class="menu-toggle">
-        <label for="menu-toggle" class="hamburguer">
-            <span></span>
-            <span></span>
-            <span></span>
-        </label>
-        <ul class="menu">
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Serviços</a></li>
-        <li><a href="#">Contato</a></li>
-        </ul>
-    </nav> 
+        <h1>FESTA JUNINA E CULINÁRIA</h1>
+        <p>Uma celebração que une o campo e a cidade através da cultura e do sabor.</p>
     </header>
-    <main>
-        <section class="principal container">
-            <h1>FESTA JUNINA E CULINÁRIA</h1>
-            <p>As festas tradicionais do campo, como a Festa Junina e o São João, trazem para as cidades elementos rurais, como danças típicas, comidas tradicionais e músicas regionais. Esses eventos celebram a cultura rural e permitem que os urbanos experimentem as tradições do interior.
 
-A cultura de troca de saberes promove a conexão entre o campo e a cidade através de oficinas e palestras sobre temas como agricultura sustentável, culinária rural e artesanato. Essas iniciativas ajudam os urbanos a aprender práticas do campo, como cultivo em hortas urbanas e receitas tradicionais, criando um ambiente de aprendizado mútuo e valorização cultural.
+    <section>
+        <h2>🌽 Campo e Cidade: Uma Parceria de Sabores e Tradições</h2>
+        <p>O campo traz seus saberes, colheitas e histórias; a cidade recebe com curiosidade, respeito e alegria. A Festa Junina é uma ponte que une esses dois mundos, permitindo a troca de experiências através da culinária, dos trajes e das celebrações típicas.</p>
+    </section>
 
-Essas ações integram as culturas, promovendo o respeito e a conscientização entre o campo e a cidade.</p>
-        
+    <section class="estrofe">
+        <h2>🎉 Estrofe sobre a Festa Junina</h2>
+        <p>
+            No céu brilham balões, no chão fogueira a arder,<br>
+            Entre risos e canções, a festa vai acontecer.<br>
+            Com pipoca e quentão, o povo vem festejar,<br>
+            Junho chegou no sertão, é tempo de celebrar!
+        </p>
+        <img src="img/festa-junina.jpg" alt="Festa Junina" class="img-single">
+    </section>
 
- <h1>FESTAS TRADICIONAIS E CULTURA DE SABORES</h1>
- 
- </main>
- <footer>
+    <section class="trajes">
+        <h2>👒 Trajes Juninos: Charme e Tradição</h2>
+        <p>As roupas típicas são um dos grandes símbolos da Festa Junina! Os trajes masculinos trazem camisas xadrez, chapéus de palha e calças remendadas. Já os femininos encantam com vestidos rodados, laços coloridos e maquiagem com pintinhas no rosto.</p>
+        <div class="img-dupla">
+            <img src="img/traje-masculino.jpg" alt="Traje Masculino">
+            <img src="img/traje-feminino.jpg" alt="Traje Feminino">
+        </div>
+    </section>
 
- </footer>
+    <section class="comidas">
+        <h2>🍴 Sabores Juninos: 5 Comidas Típicas</h2>
+        <ul>
+            <li><strong>Pamonha</strong> – Feita com milho verde, é cozida na palha e tem sabor marcante.</li>
+            <li><strong>Canjica</strong> – Um doce cremoso feito com milho branco, leite e açúcar.</li>
+            <li><strong>Bolo de Milho</strong> – Tradicional nas festas, é macio e perfumado.</li>
+            <li><strong>Pé-de-moleque</strong> – Um doce crocante de amendoim e rapadura.</li>
+            <li><strong>Cuscuz</strong> – Muito versátil, pode ser doce ou salgado.</li>
+        </ul>
+        <div class="img-grid">
+            <img src="img/pamonha.jpg" alt="Pamonha">
+            <img src="img/canjica.jpg" alt="Canjica">
+            <img src="img/bolo-milho.jpg" alt="Bolo de Milho">
+            <img src="img/pe-de-moleque.jpg" alt="Pé-de-moleque">
+            <img src="img/cuscuz.jpg" alt="Cuscuz">
+        </div>
+    </section>
+
+    <footer>
+        <p>© 2025 - Projeto Festa Junina</p>
+    </footer>
 </body>
 </html>
