--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2>👒 Trajes Juninos: Charme e Tradição</h2>
         <p>As roupas típicas são um dos grandes símbolos da Festa Junina! Os trajes masculinos trazem camisas xadrez, chapéus de palha e calças remendadas. Já os femininos encantam com vestidos rodados, laços coloridos e maquiagem com pintinhas no rosto.</p>
         <div class="img-dupla">
-            <img src="img/traje-masculino.jpg" alt="Traje Masculino">
+            <img src="img/traje.webp" alt="Traje Masculino">
             <img src="img/traje-feminino.jpg" alt="Traje Feminino">
         </div>
     </section>
