--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             Com pipoca e quentão, o povo vem festejar,<br>
             Junho chegou no sertão, é tempo de celebrar!
         </p>
-        <img src="img/festa-junina.jpg" alt="Festa Junina" class="img-single">
+        <img src="img/principal.webp" alt="Festa Junina" class="img-single">
     </section>
 
     <section class="trajes">
@@ -33,7 +33,7 @@
         <p>As roupas típicas são um dos grandes símbolos da Festa Junina! Os trajes masculinos trazem camisas xadrez, chapéus de palha e calças remendadas. Já os femininos encantam com vestidos rodados, laços coloridos e maquiagem com pintinhas no rosto.</p>
         <div class="img-dupla">
             <img src="img/traje.webp" alt="Traje Masculino">
-            <img src="img/traje-feminino.jpg" alt="Traje Feminino">
+            <img src="img/mulher.jpg" alt="Traje Feminino">
         </div>
     </section>
 
