--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </section>
 
     <section class="estrofe">
-        <h2>🎉 Estrofe sobre a Festa Junina</h2>
+        <h2>🎉 A Festa Junina</h2>
         <p>
             No céu brilham balões, no chão fogueira a arder,<br>
             Entre risos e canções, a festa vai acontecer.<br>
@@ -47,11 +47,11 @@
             <li><strong>Cuscuz</strong> – Muito versátil, pode ser doce ou salgado.</li>
         </ul>
         <div class="img-grid">
-            <img src="img/pamonha.jpg" alt="Pamonha">
-            <img src="img/canjica.jpg" alt="Canjica">
-            <img src="img/bolo-milho.jpg" alt="Bolo de Milho">
-            <img src="img/pe-de-moleque.jpg" alt="Pé-de-moleque">
-            <img src="img/cuscuz.jpg" alt="Cuscuz">
+            <img src="img/pamonha.webp" alt="Pamonha">
+            <img src="img/canjica.webp" alt="Canjica">
+            <img src="img/milho.jpg" alt="Bolo de Milho">
+            <img src="img/pe.jpg" alt="Pé-de-moleque">
+            <img src="img/cuscuz-de-milho.jpg" alt="Cuscuz">
         </div>
     </section>
 
