--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             Com pipoca e quentão, o povo vem festejar,<br>
             Junho chegou no sertão, é tempo de celebrar!
         </p>
-        <img src="img/principal.webp" alt="Festa Junina" class="img-single">
+        <img src="img/centro.jpg" alt="Festa Junina" class="img-single">
     </section>
 
     <section class="trajes">
