--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </section>
 
     <footer>
-        <p>© 2025 - Projeto Festa Junina</p>
+        <p>© 2025 - Projeto Festa Junina desenvolvido por Mariane.</p>
     </footer>
 </body>
 </html>
