--- a/index.html
+++ b/index.html
@@ -76,23 +76,23 @@
            <h2>Sabores Juninos: 5 Comidas Típicas</h2>
 <div class="comidas-container">
   <div class="comida">
-    <img src="pamonha.jpg" alt="Pamonha">
+    <img src="img/pamonha.webp" alt="Pamonha">
     <p>Pamonha</p>
   </div>
   <div class="comida">
-    <img src="canjica.jpg" alt="Canjica">
-    <p>Canjica</p>
+    <img src="img/canjica.webp"alt="Canjica">
+    <p>Canjica</p> 
   </div>
   <div class="comida">
-    <img src="milho.jpg" alt="Milho Cozido">
+    <img src="img/milho.jpg" alt="Milho Cozido">
     <p>Milho Cozido</p>
   </div>
   <div class="comida">
-    <img src="amendoim.jpg" alt="Doce de Amendoim">
+    <img src="img/paçoca.jpg" alt="Doce de Amendoim">
     <p>Doce de Amendoim</p>
   </div>
   <div class="comida">
-    <img src="cuscuz.jpg" alt="Cuscuz">
+    <img src="img/cuscuz-de-milho.jpg" alt="Cuscuz">
     <p>Cuscuz</p>
   </div>
 </div>
